--- a/backend/gateway-service/src/main/resources/application.properties
+++ b/backend/gateway-service/src/main/resources/application.properties
@@ -1,13 +1,12 @@
 spring.application.name=gateway-service
 server.port=8085
-
-# Eureka
-eureka.client.service-url.defaultZone=http://localhost:8761/eureka
-eureka.client.register-with-eureka=true
-eureka.client.fetch-registry=true
-
-# Config Server
 spring.config.import=configserver:http://localhost:8888
 
-# Actuator
+# ----- Eureka -----
+eureka.client.service-url.defaultZone=http://localhost:8761/eureka
+eureka.client.registerWithEureka=true
+eureka.client.fetch-registry=true
 management.endpoints.web.exposure.include=*
+
+
+
