--- a/backend/controle-service/src/main/resources/application.properties
+++ b/backend/controle-service/src/main/resources/application.properties
@@ -1,1 +1,7 @@
 spring.application.name=controle-service
+server.port=8087
+# ===========================
+# Config Server
+# ===========================
+spring.config.import=configserver:http://localhost:8888
+management.endpoints.web.exposure.include=*
