config: update services configuration and RabbitMQ connection

--- a/backend/environment-service/src/main/resources/application.properties
+++ b/backend/environment-service/src/main/resources/application.properties
@@ -6,6 +6,16 @@ server.port=8089
 # ===========================
 # Config Server
 # ===========================
-spring.config.import=configserver:http://localhost:8888
+spring.config.import=configserver:http://config-server:8888
 management.endpoints.web.exposure.include=*
 
+# ----- Eureka -----
+eureka.client.service-url.defaultZone=http://eureka-server:8761/eureka
+eureka.client.register-with-eureka=true
+eureka.client.fetch-registry=true
+
+
+
+# ----- Logging -----
+logging.level.org.springframework.cloud.config.server=INFO
+logging.level.org.springframework.cloud=INFO
