--- a/backend/config-server/src/main/resources/application2.properties
+++ b/backend/config-server/src/main/resources/application2.properties
@@ -3,7 +3,7 @@ spring.application.name=config-server
 server.port=8888
 
 # ----- Eureka -----
-eureka.client.service-url.defaultZone=http://eureka-server:8761/eureka
+eureka.client.service-url.defaultZone=http://localhost:8761/eureka
 eureka.client.registerWithEureka=true
 eureka.client.fetch-registry=true
 
