--- a/backend/gateway-service/src/main/resources/application.properties
+++ b/backend/gateway-service/src/main/resources/application.properties
@@ -1,12 +1,13 @@
 spring.application.name=gateway-service
 server.port=8085
-spring.config.import=configserver:http://localhost:8888
+
+# ----- Config Server -----
+spring.config.import=configserver:http://config-server:8888
 
 # ----- Eureka -----
-eureka.client.service-url.defaultZone=http://localhost:8761/eureka
-eureka.client.registerWithEureka=true
+eureka.client.service-url.defaultZone=http://eureka-server:8761/eureka
+eureka.client.register-with-eureka=true
 eureka.client.fetch-registry=true
+
+# ----- Actuator -----
 management.endpoints.web.exposure.include=*
-
-
-
