--- a/backend/environment-service/pom.xml
+++ b/backend/environment-service/pom.xml
@@ -92,7 +92,12 @@
 			<artifactId>spring-boot-starter-webmvc-test</artifactId>
 			<scope>test</scope>
 		</dependency>
-	
+
+		<dependency>
+			<groupId>com.smartgreenhouse.itbs</groupId>
+			<artifactId>controle-service</artifactId>
+			<version>0.0.1-SNAPSHOT</version>
+		</dependency>
 	</dependencies>
 	<dependencyManagement>
 		<dependencies>
